src/components/showEdit/showEdit.module.scss
*:has(> .showEditContainer):hover {
  outline: 1px solid black;
  >.showEditContainer {
    visibility: visible;
  }
}

*:has(> .showEditContainerInline):hover:after {
  width: 100%;
  position: absolute;
  bottom: -5px;
  height: 1px;
  background-color: black;
  content: '';
}

.modalEdit {
  font-family: Arial, Helvetica, sans-serif;
}

.showEdit * {
  box-sizing: border-box;
}

.showEditContainerMain {
  display: inline-flex;
  gap: 5px;
}

.showEditContainerInline {
  @extend .showEditContainerMain;
}

.showEditContainer {
  @extend .showEditContainerMain;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1000;
  visibility: hidden;
}

.btnShowEdit {
  color: black;
  background-color: var(--lumina-color-text);
  border: 2px solid --lumina-bg-color-inverted;
}

.modalOverlay {
  background-color: color-mix(in srgb, var(--lumina-bg-color) 80%, transparent);
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 40px;
  box-sizing: border-box;
  z-index: 2000;

  * {
    box-sizing: border-box;
  }
}

.modalEdit {
  margin: 0 auto;
  width: 50%;
  min-width: 950px;
  max-width: 100%;
  max-height: 700px;
  overflow: auto;
  border: 1px solid;
  background: var(--lumina-bg-color);
  border-radius: 5px;
  padding: 40px;
}
@media screen and (max-width: 950px) {
  .modal-container {
    min-width: 0;
    width: 80%;
  }
}

.title {
  color: var(--lumina-color-text);
  margin-top: 0;
}

.formTableCell {
  padding-bottom: 8px;
}

.formTableLabel {
  padding-right: 8px;
}

.inlineButtons {
  display: flex;
  gap: 10px;
  margin-top: 10px;
}

